# Lazarus

./: .eslintrc.cjs  README.md  db.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
client/: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.css  App.tsx
client/src/hooks/: useBookStyles.tsx
client/src/modules/: utility.module.css
client/src/pages/: AudioBooksPage.tsx  HomePage.tsx  MostLikedPage.tsx  MostStaredPage.tsx  WishListPage.tsx
client/src/services/: bookService.ts
client/src/types/: book.ts
server/: .tool-versions  Notes.md  README.md  entrypoint.sh  pyproject.toml  run_dev.sh  run_test.sh
server/controllers/: hub_controller.py
src/: App.css  App.jsx  main.jsx  main.tsx
src/components/atoms/: ChatBtn.jsx  ChatBtn.module.css  ChatInput.jsx  ChatInput.module.css  ChatInput.tsx  SearchBtn.jsx
src/components/atoms/Book/: index.jsx  index.module.css  index.tsx
src/components/atoms/Button/: Btn.module.css  index.jsx  index.module.css  index.tsx
src/components/atoms/ChatBubble/: index.jsx  index.module.css
src/components/atoms/ChatInput/: index.tsx
src/components/molecules/: PopularBooks.tsx
src/components/templates/: PageWrapper.jsx  ViewWrapper.jsx  ViewWrapper.module.css
src/hooks/: useBookStyles.tsx  useSmallBookStyles.tsx
src/modules/: layout.module.css  utility.module.css
src/pages/: AudioBooksPage.jsx  HomePage.jsx  HomePage.tsx  MostLikedPage.tsx  MostStaredPage.tsx  WishListPage.tsx
src/services/: bookService.ts
(+44 files in other folders)
