[tool.poetry]
name = "lazarus-services"
version = "0.1.0"
description = "Open the doors of science"
authors = ["Fantasy <37631123+Fantasy-programming@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "alpheim_services" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
retrying = "^1.3.4"
PySocks = "^1.7.1"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
mypy = "^1.7.1"
black = "^23.12.0"
pytest = "^7.4.3"
isort = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
